# photoEditor

./: CMakeLists.txt  convertor.cpp  convertor.h  exception.cpp  exception.h  image.cpp  image.h  main.cpp  parser.cpp  parser.h  readme.md
filters/: crop.cpp  crop.h  edgeDetection.cpp  edgeDetection.h  filters.cpp  filters.h  gaussionBlur.cpp  gaussionBlur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h  sketch.cpp  sketch.h  sobel.cpp  sobel.h
